@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
     'createDirs' => '',
     'clearCacheOnLoad' => 0,
     'author_company' => '',
-    'version' => '0.3.0',
+    'version' => '0.4.0',
     'constraints' => array(
         'depends' => array(
             'php' => '5.5.0-7.99.99',
